# ocaml-sugar

./: .gitignore  .merlin  CHANGES.md  LICENSE  Makefile  README.md  _oasis  _tags  index.html  myocamlbuild.ml  myocamlbuild.ml.bak  opam  setup.ml  sugar.install  sugar.odocl  sugar.opam
doc/: index.html
doc/latest/: index.html
docs/: intro.html  presentation.html
examples/: .merlin  example_async.ml  example_basic.ml  example_lwt.ml  example_monadic.ml  example_strict.ml  free_basic.ml  free_error_aware.ml  free_error_aware_combined.ml  jbuild  possible_convention.ml
examples/async/: example_async.ml
examples/basic/: example_basic.ml
examples/free/: free_basic.ml  free_error_aware.ml  free_error_aware_combined.ml  sugar_result_natural.ml
examples/lwt/: example_lwt.ml
examples/monadic/: example_lwt.ml
examples/semicolon/: example_semicolon.ml
examples/strict_async/: jbuild  main.ml
examples/strict_lwt/: example_lwt_strict.ml  jbuild
lib/: META  sugar.ml  sugar_option.ml  sugar_result.ml  sugar_std.mli
lib/async/: .merlin  sugar_async.ml  sugar_async.mllib
lib/lwt/: .merlin  sugar-lwt.mllib  sugar_lwt.ml
lib/sugar/: META  sugar.ml  sugar.mldylib  sugar.mllib  sugar_dsl.ml  sugar_free.ml  sugar_generic.ml  sugar_machine.ml  (+12 more)
pkg/: META
src/: .merlin  abstract.ml  dsl.ml  jbuild  option.ml  promise.ml  promise_builder.ml  result.ml  result_builder.ml  s.ml  strict_promise.ml  strict_promise_builder.ml  strict_promise_builder_async.ml  strict_result.ml  strict_result_builder.ml  sugar.ml  sugarResult.ml  sugar_ml_old  sugar_result.ml  types.ml
(+172 files in other folders)
