opam-version: "1.2"
name: "sugar"
version: "0.5.0"
maintainer: "Gerson Moraes <gerson@digirati.com.br>"
authors: "Gerson Moraes <gerson@digirati.com.br>"
homepage: "https://github.com/gersonmoraes/ocaml-sugar"
dev-repo: "https://github.com/gersonmoraes/ocaml-sugar"
bug-reports: "https://github.com/gersonmoraes/ocaml-sugar/issues"
license: "MIT"
build: [
  ["jbuilder" "build"
    "--only-packages" "sugar"
    "--root" "."
    "-j" jobs
    "@install"]
]
depends: [
  "jbuilder"      {>= "1.0+beta5"}
]
available: [ ocaml-version >= "4.02.3" ]
descr: "A DSL Driven library for OCaml projects"
