opam-version: "1.2"
name: "sugar"
maintainer: "Gerson Moraes <gerson@digirati.com.br>"
authors: "Gerson Moraes <gerson@digirati.com.br>"
homepage: "https://github.com/gersonmoraes/ocaml-sugar"
dev-repo: "https://github.com/gersonmoraes/ocaml-sugar"
bug-reports: "https://github.com/gersonmoraes/ocaml-sugar/issues"
doc: "https://gersonmoraes.github.io/ocaml-sugar/doc"
license: "MIT"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder"       {>= "1.0+beta11"}
  "ocamlfind"      {build}
  "ocamlbuild"     {build}
  "topkg"          {build & >= "0.9.0"}
  "topkg-jbuilder" {build}
]
available: [ ocaml-version >= "4.02.3" ]
